--- a/404.html
+++ b/404.html
@@ -27,20 +27,22 @@ permalink: /404.html
   <link href="css/404.css" rel="stylesheet">
 
   <!-- Custom favicon -->
-  <link rel="shortcut icon" href="img/icey.gif" type="image/x-icon">
+  <link rel="shortcut icon" href="img/69803500_10217249794511066_7089489742827356160_n.jpg" >
 
 </head>
   <body>
     <!-- 404 404 404 -->
     <div class="container">
 		<figure>
-		  <a href="https://www.youtube.com/watch?v=RE87rQkXdNw">
-			<img src="img/thumb.jpg" class="img-fluid" alt="sad face">
+		  <a href="https://www.youtube.com/watch?v=iQrPgRNqlZo">
+			<img src="img/69803500_10217249794511066_7089489742827356160_n.jpg" class="image-flude" alt="Nature">
 		  </a>
 		  <figcaption class="text-center">
-		  <span class="font-weight-bold">404 - This page doesn't exist.</span> <br/>
+      <span class="font-weight-bold">404 - This page doesn't exist.Love Yourself.</span>
+      <span style='font-size:40px;'>&#128150;</span> <br/>
+      <p class="emoji">Have a good one.&#9996;</p>
 		  <a href="https://rabindradahal.com.np">Try going home?<a> <br/>
-		  [or click the image for a <span class="font-italic">happier</span> video]</figcaption>
+		  [or click the image for a <span class="font-italic">Acquainted</span> video]</figcaption>
 		</figure>
     </div>
   </body>
