updated about me .

--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
             
             Besides all these, i like traveling,hiking,trekking a lot like a lot you know though i havenot traveled more than couple of places besides ktm and my hometown. I really like adventure, i like exploring corners of the world,exploring things the people dont know about because i really like understanding things by going really deep you know.And i also like football,reading books.
 
+            You can go via this this link https://rabindradahal.blogspot.com/ to look some posts of mine.
+
         </div>
 				
 			</div>
