--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="img/mycv.pdf">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="img/Rabindra CV.pdf">Resume</a>
           </li>
         </ul>
       </div>
