--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
   
   
   <!-- Some fun stuff, leave the boring code for last. -->
-  <section  >
+  <section  class="aboutmey">
     <div class="container-fluid">
       <div class="row images-vcenter">
 			
