about me changed little bi

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container">
 
       <!-- Updated with latest Creative -->
-      <a class="navbar-brand coloronname" href="#page-top">Rabindra Dahal</a>
+      <a class="navbar-brand coloronname" href="#page-top">i love you Jeni</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" 
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
