about me changed little bi

--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
     <div class="container">
 
       <!-- Updated with latest Creative -->
-      <a class="navbar-brand coloronname" href="#page-top">i love you Jeni</a>
+      <a class="navbar-brand coloronname" href="#page-top">Rabindra Dahal</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" 
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
               aria-label="Toggle navigation">
+      <button src="img/Rabindras.png"></button>
         <span class="navbar-toggler-icon"></span>
       </button>
 
