about me changed little bi

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
               aria-label="Toggle navigation">
-      <button src="img/Rabindras.png"></button>
+      <button><img class="img-responsive" width="100%" height="auto" src="img/Rabindras.png">
+      </button>
         <span class="navbar-toggler-icon"></span>
       </button>
 
