about me changed little bi

--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
     <div class="container">
 
       <!-- Updated with latest Creative -->
-      <a class="navbar-brand coloronname" href="#page-top">Rabindra Dahal</a>
+      <button>
+        <a class="navbar-brand coloronname" href="#page-top">Rabindra Dahal</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" 
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
               aria-label="Toggle navigation">
-      <button><img class="img" src="img/Rabindras.png">
+      <button>
       </button>
         <span class="navbar-toggler-icon"></span>
       </button>
