about me changed little bi

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <div class="container">
 
       <!-- Updated with latest Creative -->
-      <button>
-        <a class="navbar-brand coloronname" href="#page-top">Rabindra Dahal</a>
+      <a href="#page-top" class="img-what"><img src="img/Rabindras.png" alt=""></a>
+      <!-- <a class="navbar-brand coloronname" href="#page-top">Rabindra Dahal</a> -->
       <button class="navbar-toggler navbar-toggler-right" type="button" 
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
